just small fixes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,5 @@ spring.security.user.roles=manager
 security.basic.enabled=false
 spring.queries.users-query=select email, password, '1' as enabled from users where email=? and status='VERIFIED'
 spring.queries.roles-query=select u.email, r.role from users u inner join users_roles ur on(u.id=ur.user_id) inner join roles r on(ur.roles_id=r.id) where u.email=?
+
+spring.jpa.show-sql=false
